--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>ros_pkg_example</name>
+  <name>solamr_monitor</name>
   <version>0.0.0</version>
-  <description>The ros_pkg_example package</description>
+  <description>The solamr_monitor package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/ros_pkg_example</url> -->
+  <!-- <url type="website">http://wiki.ros.org/solamr_monitor</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
